cealdemo/tests/neg2/168.gold
Error: (line 5:1 '._autobits') Macro _autobits: N is not set encrypted values
